--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    tools:context=".MainActivity"
-    android:background="@drawable/Backgroundhomepage">
+    tools:context=".LoginStudent"
+    android:background="@drawable/background_home_page">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_marginTop="50dp">
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="222dp"
+            android:layout_height="217dp"
+            android:layout_margin="10dp"
+            android:layout_marginTop="100dp"
+            android:gravity="center"
+            app:srcCompat="@drawable/logo_universitas_klabat" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="7dp"
+            android:layout_gravity="center">
+
+            <TextView
+                android:id="@+id/text_welcome"
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                android:text="Welcome!"
+                android:gravity="center"
+                android:textColor="#FFFFFF"
+                android:textSize="40dp" />
+
+            <TextView
+                android:id="@+id/text_command"
+                android:layout_width="350dp"
+                android:layout_height="40dp"
+                android:text="You will be logged in as??"
+                android:textColor="#FFFFFF"
+                android:textSize="20dp"
+                android:gravity="center"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="50dp">
+
+            <Button
+                android:id="@+id/btn_login_lecture"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/btn_login"
+                android:layout_marginLeft="13dp"
+                android:text="STUDENT"
+                android:textAllCaps="false"
+                android:textSize="17sp" />
+
+            <Button
+                android:id="@+id/btn_to_login_lecturer"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_login"
+                android:text="LECTURER"
+                android:textAllCaps="false"
+                android:textSize="17sp" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/text_need_help"
+            android:layout_width="145dp"
+            android:layout_height="25dp"
+            android:gravity="center"
+            android:layout_marginTop="60dp"
+            android:text="Need Help?"
+            android:textColor="#FFFFFF"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/text_about"
+            android:layout_width="70dp"
+            android:layout_height="25dp"
+            android:gravity="center"
+            android:layout_marginTop="20dp"
+            android:text="About"
+            android:textColor="#FFFFFF"
+            android:textSize="15dp" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
+    </LinearLayout>
 
 </RelativeLayout>
