--- a/app/src/main/res/layout/activity_profile_student.xml
+++ b/app/src/main/res/layout/activity_profile_student.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".LoginLecture">
+    tools:context=".ProfileStudent">
 
     <LinearLayout
         android:layout_width="match_parent"
